# image_client_server

./: CMakeLists.txt  MultiClientServer.h  MultiClientServer.inl  client.cpp  server.cpp  structs.h
